--- a/package.json
+++ b/package.json
@@ -207,8 +207,8 @@
   "dependencies": {
     "babel-polyfill": "6.13.0",
     "chalk": "1.1.3",
-    "cross-env": "2.0.1",
     "compression": "1.6.2",
+    "cross-env": "2.0.1",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
@@ -219,9 +219,10 @@
     "minimist": "1.2.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
+    "react-facebook-login": "^3.3.1",
     "react-helmet": "3.1.0",
-    "react-redux": "4.4.5",
     "react-intl": "2.1.5",
+    "react-redux": "4.4.5",
     "react-router": "2.8.1",
     "react-router-redux": "4.0.5",
     "react-router-scroll": "0.3.2",
@@ -285,6 +286,7 @@
     "lint-staged": "3.0.2",
     "mocha": "3.0.2",
     "ngrok": "2.2.2",
+    "node-sass": "^3.10.1",
     "null-loader": "0.1.1",
     "offline-plugin": "3.4.2",
     "plop": "1.5.0",
@@ -295,6 +297,7 @@
     "pre-commit": "1.1.3",
     "psi": "2.0.4",
     "rimraf": "2.5.4",
+    "sass-loader": "^4.0.2",
     "shelljs": "0.7.4",
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
