--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.13.0",
+    "browser-request": "^0.3.3",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
